@@ -101,6 +101,7 @@ icons=ArrowL.png \
 	Open.png \
 	PageSetup.png \
 	ParentDir.png \
+	Parse.png \
 	Paste.png \
 	Plugins.png \
 	Preferences.png \
